# eAlloc

./: .clang-format  .gitignore  .windsurfrules  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  build_and_test.sh  goal.txt  library.json  library.properties  platformio.ini  sdkconfig.esp32dev  todo.md
docs/: genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  overview.doctree
docs/_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt
docs/breathe/doxygen/: eAlloc.cfg
docs/breathe/doxygen/eAlloc/xml/: Doxyfile.xml
docs/doxygen/latex/: _logger_8hpp.tex  _logger_8hpp.tex.tmp  _logger_8hpp__dep__incl.dot  _logger_8hpp__incl.dot  _logger_8hpp_source.tex  _stack_allocator_8hpp.tex  _stack_allocator_8hpp__incl.dot  _stack_allocator_8hpp_source.tex  annotated.tex  builtins_8h.tex  builtins_8h__dep__incl.dot  builtins_8h_source.tex  class_l_o_g_1_1_logger.tex  class_l_o_g_1_1_logger_a04c97325afbcf928407010c4fb464f0b_cgraph.dot  class_l_o_g_1_1_logger_a04c97325afbcf928407010c4fb464f0b_icgraph.dot  class_l_o_g_1_1_logger_a09e8017b40ede3d9bf8c0be52f5420b1_icgraph.dot  class_l_o_g_1_1_logger_a0a83875a11650c3fc2015248b6ae638a_icgraph.dot  class_l_o_g_1_1_logger_a16496ae8e563f143f87dd028640ae508_icgraph.dot  class_l_o_g_1_1_logger_a371ee2f5a0c4f72498744138af9f91bb_cgraph.dot  class_l_o_g_1_1_logger_a40e44f60acd6450806a71dc5c8759bf8_cgraph.dot  class_l_o_g_1_1_logger_a40e44f60acd6450806a71dc5c8759bf8_icgraph.dot  class_l_o_g_1_1_logger_a41a95b5e1e7b4c6de0cb0c8baeae7344_icgraph.dot  class_l_o_g_1_1_logger_a454d6cbdf2283334678d60a561e9c8ec_icgraph.dot  class_l_o_g_1_1_logger_a4a179c03b181bad314d4dccbba6b2c13_icgraph.dot  class_l_o_g_1_1_logger_a4abba1293f8af80ad709f36348f117cf_cgraph.dot  class_l_o_g_1_1_logger_a4abba1293f8af80ad709f36348f117cf_icgraph.dot  class_l_o_g_1_1_logger_a7f0f597abcedd4595028a380fba3e70c_icgraph.dot  class_l_o_g_1_1_logger_aab5bd0699673e20ac4a3a9d78f99e8bd_cgraph.dot  class_l_o_g_1_1_logger_ab3972d001cfda06b2d3f541fb0e5db45_icgraph.dot  class_l_o_g_1_1_logger_ac12cee96c21a9cdaab5251533de22734_cgraph.dot  class_l_o_g_1_1_logger_ac12cee96c21a9cdaab5251533de22734_icgraph.dot  class_l_o_g_1_1_logger_ac6e610c5678fb1742dbd5f3870da5c17_cgraph.dot  class_l_o_g_1_1_logger_ac6e610c5678fb1742dbd5f3870da5c17_icgraph.dot  class_l_o_g_1_1_logger_acbc58f71966974f97fc00365420fd111_cgraph.dot  class_l_o_g_1_1_logger_acdb1319a3d218b7ae2cdc30bba67e843_cgraph.dot  class_l_o_g_1_1_logger_acdb1319a3d218b7ae2cdc30bba67e843_icgraph.dot  class_l_o_g_1_1_logger_ad2f867eb388b55a304952af25aaaae3c_cgraph.dot  class_l_o_g_1_1_logger_ad2f867eb388b55a304952af25aaaae3c_icgraph.dot  class_l_o_g_1_1_logger_adcf40bff2af8056ebf43f019ad311dc1_icgraph.dot  class_l_o_g_1_1_logger_ae73b748603687c43f3f256f3d4292ae7_icgraph.dot  (+138 more)
docs/doxygen/xml/: Doxyfile.xml  _logger_8hpp.xml  _stack_allocator_8hpp.xml  builtins_8h.xml  class_l_o_g_1_1_logger.xml  classdsa_1_1_stack_allocator.xml  classdsa_1_1_t_l_s_f.xml  classdsa_1_1e_alloc.xml  classelock_1_1_i_lockable.xml  classelock_1_1_lock_guard.xml  classglock_1_1_i_lockable.xml  classglock_1_1_lock_guard.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  e_alloc_8cpp.xml  e_alloc_8hpp.xml  global_e_lock_8hpp.xml  global_lock_8hpp.xml  group__bitmanip.xml  index.xml  namespace_l_o_g.xml  namespacedsa.xml  namespaceelock.xml  namespaceglock.xml  structdsa_1_1_stack_allocator_1_1rebind.xml  structdsa_1_1_t_l_s_f_1_1_block_header.xml  structdsa_1_1_t_l_s_f_1_1_control.xml  structdsa_1_1_t_l_s_f_1_1_second_level.xml  structdsa_1_1e_alloc_1_1_integrity_result.xml  structdsa_1_1e_alloc_1_1_storage_report.xml  tlsf_8hpp.xml
docs/html/: .buildinfo  api.html  genindex.html  index.html  search.html  searchindex.js
docs/html/.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/html/_sources/: index.rst.txt
docs/html/_static/: custom.css
docs/sphinx/: conf.py  index.rst
docs/sphinx_build/: .buildinfo  examples.html  objects.inv  quickstart.html  searchindex.js
docs/sphinx_build/.doctrees/: environment.pickle  examples.doctree
docs/sphinx_build/_sources/: overview.rst.txt
docs/sphinx_src/: conf.py  examples.rst
examples/basic/: alloc.ino
examples/esp32dev/: CMakeLists.txt  diagram.json  platformio.ini  sdkconfig  sdkconfig.esp32dev  sdkconfig.esp32dev.old
examples/esp32dev/src/: main.cpp
script/: doxyxml_symbols.py  gen_breathe_docs.py  gen_doc.py
src/: CMakeLists.txt  Logger.hpp  StackAllocator.hpp  builtins.h  eAlloc.cpp  eAlloc.hpp  eConfig.hpp  globalELock.hpp  globalElock.cpp  globalLock.hpp  main.cpp  tlsf.hpp
tests/: StackAllocator_test.cpp  eAlloc_test.cpp  logSetup.hpp
